changed step 3 preview

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -54,18 +54,18 @@
       Your information is securely stored on Airtable and Mailchimp. We keep your email address for 5 years. We will then dispose your information by permanently deleting both databases in which your email is stored.</p>
       <br>
     <h2>Your data protection rights</h2>
-    <p>
-      Under data protection law, you have rights including:
-      <br>
-      <br><strong>Your right of access</strong> - You have the right to ask us for copies of your personal information.
-      <br><strong>Your right to rectification</strong> - You have the right to ask us to rectify personal information you think is inaccurate. You also have the right to ask us to complete information you think is incomplete.
-      <br><strong>Your right to erasure</strong> - You have the right to ask us to erase your personal information in certain circumstances.
-      <br><strong>Your right to restriction of processing</strong> - You have the right to ask us to restrict the processing of your personal information in certain circumstances.
-      <br><strong>Your right to object to processing</strong> - You have the the right to object to the processing of your personal information in certain circumstances.
-      <br><strong>Your right to data portability</strong> - You have the right to ask that we transfer the personal information you gave us to another organisation, or to you, in certain circumstances.
-      <br>You are not required to pay any charge for exercising your rights. If you make a request, we have one month to respond to you. Please contact us at <u><a target="_blank" href="mailto:hello@wanderntrails.com">hello@wanderntrails.com</a></u> if you wish to make a request.
-    </p>
+    <p>Under data protection law, you have rights including:</p>
     <br>
+    <ul>
+      <li><strong>Your right of access</strong> - You have the right to ask us for copies of your personal information.</li>
+      <li><strong>Your right to rectification</strong> - You have the right to ask us to rectify personal information you think is inaccurate. You also have the right to ask us to complete information you think is incomplete.</li>
+      <li><strong>Your right to erasure</strong> - You have the right to ask us to erase your personal information in certain circumstances.</li>
+      <li><strong>Your right to restriction of processing</strong> - You have the right to ask us to restrict the processing of your personal information in certain circumstances.</li>
+      <li><strong>Your right to object to processing</strong> - You have the the right to object to the processing of your personal information in certain circumstances.</li>
+      <li><strong>Your right to data portability</strong> - You have the right to ask that we transfer the personal information you gave us to another organisation, or to you, in certain circumstances.</li>
+    </ul>
+    <br>
+    <p>You are not required to pay any charge for exercising your rights. If you make a request, we have one month to respond to you. Please contact us at <u><a target="_blank" href="mailto:hello@wanderntrails.com">hello@wanderntrails.com</a></u> if you wish to make a request.</p>
     <h2>How to complain</h2>
     <p>If you have any concerns about our use of your personal information, you can make a complaint to us at <u><a target="_blank" href="mailto:hello@wanderntrails.com">hello@wanderntrails.com</a></u></p>
   </div>
