--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
     </div>
   </div>
 
-  <div id="scrollStopHere" class="box grey">
+  <div id="scrollStopHere" class="box grey step-1-box">
     <div class="split container">
       <div class="box-info">
         <p class="number">1</p>
@@ -56,8 +56,8 @@
           <p onclick="$('html,body').animate({scrollTop:0}, 900)" class="btn-outlined">Request access</p>
         </div>
       </div>
-      <div class="box-image">
-        <img src="assets/images/step-1.png" alt="Preview of map with trail route and waypoints">
+      <div class="box-image step-1-image">
+        <img src="assets/images/step-1.svg" alt="Preview of map with trail route and waypoints">
       </div>
     </div>
   </div>
