Fix: img src URLs

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 {% block body %}
   <div class="banner">
     <div class="container">
-      <img src="../assets/images/logo.svg" class="center-logo">
+      <img src="/assets/images/logo.svg" class="center-logo">
       <h1 class="title">Plan your trail accommodation</h1>
       <p class="subtitle">An easy way to find and book mountain huts and campsites on popular hiking trails.</p>
       <form id="form-request-access" class="hide-submit" method="POST" action="/">
