--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -7,7 +7,7 @@
 
 {% block body %}
   <div class="container">
-  <a href="/"><img src="../assets/images/logo-dark.svg" class="center-logo"></a>
+  <a href="/"><img src="/assets/images/logo-dark.svg" class="center-logo"></a>
   <div class="privacy">
     <h1>Privacy Policy</h1>
     <h2>Information we collect</h2>
