Story of the missing closing div tag

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -59,4 +59,5 @@
     <h2>How to complain</h2>
     <p>If you have any concerns about our use of your personal information, you can make a complaint to us at <u><a target="_blank" href="mailto:hello@wanderntrails.com">hello@wanderntrails.com</a></u></p>
   </div>
+</div>
 {% endblock %}
