--- a/assets/stylesheets/components/step.css
+++ b/assets/stylesheets/components/step.css
@@ -80,7 +80,8 @@
   }
 
   .box-image {
-    width: 100%;
+    max-width: 550px;
+    min-width: 350px;
     padding: 16px;
   }
 
@@ -92,11 +93,6 @@
 
   .step-1-box {
     height: 1200px;
-  }
-
-  .box-image img {
-    max-width: 100vw;
-    object-fit: contain;
   }
 
   .box-info {
