Added team photos

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -46,6 +46,22 @@
     {% endblock %}
 
     <footer>
+      <div class="team">
+        <a href="https://www.linkedin.com/in/seyhankhan/" class="member">
+          <img src="assets/images/seyhan.png" alt="" class="avatar">
+          <div>
+            <p>Co-founder, CTO</p>
+            <p>Seyhan Van Khan</p>
+          </div>
+        </a>
+        <a href="https://www.linkedin.com/in/alizehkhan/" class="member">
+          <img src="assets/images/alizeh.png" alt="" class="avatar">
+          <div>
+            <p>Co-founder, CPO</p>
+            <p>Alizeh Khan</p>
+          </div>
+        </a>
+      </div>
       <a href="/"><img src="/assets/images/logo-footer.svg" alt="Wandern logo"></a>
       <a class="unselectable" href="/privacy">Privacy Policy</a>
       <address>hello@wanderntrails.com</address>
