Fix: highlighting & down arrow cursor

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -40,6 +40,9 @@ a {
   color: var(--bodyFont);
 }
 
-.unselectable {
+.unselectable, img, .number, .btn-outlined {
   user-select: none;
+}
+img {
+  pointer-events: none;
 }
