--- a/assets/stylesheets/components/banner.css
+++ b/assets/stylesheets/components/banner.css
@@ -55,12 +55,10 @@
 .down-arrow {
   display: block;
   margin: 0 auto;
-  margin-top: 40px
-}
-
-.icon-tabler-chevrons-down {
+  margin-top: 40px;
   cursor: pointer;
 }
+
 
 .btn-send {
   background: var(--wandernOrange);
