Replaced ancient JQuery with good ol JS

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,8 +17,8 @@
     <!-- Facebook Open Graph data -->
     <meta property="og:title" content="Wandern | Plan your trail accommodation" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://wanderntrails.com" />
-    <meta property="og:image" content="https://wanderntrails.com/og-image.png" />
+    <meta property="og:url" content="http://wanderntrails.com" />
+    <meta property="og:image" content="http://wanderntrails.com/og-image.png" />
     <meta property="og:description" content="An easy way to find and book mountain huts and campsites on popular hiking trails. See your trail’s stages, water sources, and resupply points." />
     <meta property="og:site_name" content="Wandern" />
 
@@ -27,7 +27,7 @@
     <meta name="twitter:text:title" content="Wandern | Plan your trail accommodation">
     <meta name="twitter:title" content="Wandern | Plan your trail accommodation">
     <meta name="twitter:description" content="An easy way to find and book mountain huts and campsites on popular hiking trails. See your trail’s stages, water sources, and resupply points.">
-    <meta name="twitter:image:src" content="https://wanderntrails.com/og-image.png">
+    <meta name="twitter:image:src" content="http://wanderntrails.com/og-image.png">
 
     <meta name="author" content="Alizeh Khan & Seyhan Van Khan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,7 +38,7 @@
     <link rel="manifest" href="/manifest.webmanifest">
 
     <link rel="stylesheet" href="/assets/stylesheets/style.css" >
-    <script src="/assets/jquery/jquery-3.5.1.min.js"></script>
+    <script src="/assets/javascript/main.js"></script>
   </head>
 
   <body>
@@ -48,14 +48,14 @@
     <footer>
       <div class="team">
         <a href="https://www.linkedin.com/in/seyhankhan/" class="member">
-          <img src="assets/images/seyhan.png" alt="" class="avatar">
+          <img src="/assets/images/seyhan.png" alt="" class="avatar">
           <div>
             <p>Co-founder, CTO</p>
             <p>Seyhan Van Khan</p>
           </div>
         </a>
         <a href="https://www.linkedin.com/in/alizehkhan/" class="member">
-          <img src="assets/images/alizeh.png" alt="" class="avatar">
+          <img src="/assets/images/alizeh.png" alt="" class="avatar">
           <div>
             <p>Co-founder, CPO</p>
             <p>Alizeh Khan</p>
