--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
         {% elif inputMessage == "error" %}
           <p class="input-message">⚠️ Oops something went wrong, please try again!</p>
         {% endif %}
-      <svg class="down-arrow" onclick="$('html, body').animate({scrollTop: $('#scrollStopHere').offset().top - parseInt($('#scrollStopHere').css('margin-top'), 10)}, 1000)" xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <svg class="down-arrow" xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/><polyline points="7 7 12 12 17 7" /><polyline points="7 13 12 18 17 13" />
       </svg>
     </div>
@@ -44,7 +44,7 @@
         <div class="title-description-button">
           <h2>Pick a trail</h2>
           <p>Explore mountain huts and campsites along on your trail. See the trail’s stages, water sources, and resupply points.</p>
-          <p onclick="$('html,body').animate({scrollTop:0}, 900)" class="btn-outlined">Request access</p>
+          <p class="btn-outlined request-access">Request access</p>
         </div>
       </div>
       <img class="box-image step-1-image" src="assets/images/step-1.svg" alt="Preview of map with trail route and waypoints">
@@ -59,7 +59,7 @@
         <div class="title-description-button">
           <h2>Build your itinerary</h2>
           <p>Check availability and add the campsite or hut, you’d like to stay at, to your itinerary. See your trip unfold on the map.</p>
-          <p onclick="$('html,body').animate({scrollTop:0}, 1050)" class="btn-outlined">Request access</p>
+          <p class="btn-outlined request-access">Request access</p>
         </div>
       </div>
     </div>
@@ -72,7 +72,7 @@
         <div class="title-description-button">
           <h2>Confirm and book</h2>
           <p>Book all the accommodation that you need to in your itinerary in one go without leaving the site.</p>
-          <p onclick="$('html,body').animate({scrollTop:0}, 1250)" class="btn-outlined">Request access</p>
+          <p class="btn-outlined request-access">Request access</p>
         </div>
       </div>
       <img class="box-image" src="assets/images/step-3.svg" alt="Preview of booking checkout">
