--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 {% block body %}
   <div class="banner">
     <div class="container">
-      <img src="/assets/images/logo.svg" class="center-logo">
+      <img src="/assets/images/logo/logo.svg" class="center-logo">
       <h1 class="title">Plan your trail accommodation</h1>
       <p class="subtitle">An easy way to find and book mountain huts and campsites on popular hiking trails.</p>
       <form id="form-request-access" class="hide-submit" method="POST" action="/">
@@ -47,13 +47,13 @@
           <p class="btn-outlined request-access">Request access</p>
         </div>
       </div>
-      <img class="box-image step-1-image" src="assets/images/step-1.svg" alt="Preview of map with trail route and waypoints">
+      <img class="box-image step-1-image" src="assets/images/step/1.svg" alt="Preview of map with trail route and waypoints">
     </div>
   </div>
 
   <div class="box">
     <div class="split container reverse">
-      <img class="box-image" src="assets/images/step-2.svg" alt="Preview of accommodation cards added to itinerary and availability calendar">
+      <img class="box-image" src="assets/images/step/2.svg" alt="Preview of accommodation cards added to itinerary and availability calendar">
       <div class="box-info">
         <p class="number" id="grey-number">2</p>
         <div class="title-description-button">
@@ -75,7 +75,7 @@
           <p class="btn-outlined request-access">Request access</p>
         </div>
       </div>
-      <img class="box-image" src="assets/images/step-3.svg" alt="Preview of booking checkout">
+      <img class="box-image" src="assets/images/step/3.svg" alt="Preview of booking checkout">
     </div>
   </div>
 
