--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
           name="email"
           class="input-email unselectable {% if inputMessage in ['error','userExists'] %}shake{% endif %}"
           placeholder="Email me when it’s ready"
-        required>
+          required>
         <label class="btn-send">
           <input type="submit">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-send" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><line x1="10" y1="14" x2="21" y2="3" /><path d="M21 3l-6.5 18a0.55 .55 0 0 1 -1 0l-3.5 -7l-7 -3.5a0.55 .55 0 0 1 0 -1l18 -6.5" /></svg>
@@ -58,7 +58,7 @@
         <p class="number" id="grey-number">2</p>
         <div class="title-description-button">
           <h2>Build your itinerary</h2>
-          <p>Check availability and add the campsite or hut, you’d like to stay at, to your itinerary. See your trip unfold on the map.</p>
+          <p>Check availability and add the campsite or hut you’d like to stay at to your itinerary. See your trip unfold on the map.</p>
           <p class="btn-outlined request-access">Request access</p>
         </div>
       </div>
