--- a/templates/layout.html
+++ b/templates/layout.html
@@ -50,7 +50,7 @@
     {% block body %}
     {% endblock %}
 
-    <footer>
+    <footer class="bg-dark">
       <div class="team">
         <a href="https://www.linkedin.com/in/seyhankhan/" class="member">
           <img src="/assets/images/seyhan.png" alt="" class="avatar">
