--- a/assets/stylesheets/components/features.css
+++ b/assets/stylesheets/components/features.css
@@ -1,28 +1,24 @@
-.banner-navy {
-  background: var(--blueGray800);
-  color: white;
-}
-
 .features {
   display: flex;
   justify-content: space-around;
-  padding: 32px 0 80px 0;
+  padding: 24px 0 40px 0;
 }
 
 .feature {
-  width: 240px;
+  width: 225px;
   text-align: center;
-  font-size: 14px;
+  color: white;
+  margin-top: 40px;
 }
 
-.feature svg {
-  padding-top: 32px;
-}
-
-.feature-title {
+.feature .title {
   font-size: 20px;
   font-weight: 600;
   margin: 16px 0;
+}
+
+.feature .description {
+  font-size: 14px;
 }
 
 @media (max-width: 900px) {
