--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
-@import url(components/banner.css);
+@import url(components/background.css);
+@import url(components/buttons.css);
 @import url(components/container.css);
 @import url(components/features.css);
 @import url(components/footer.css);
-@import url(components/step.css);
+@import url(components/form.css);
+@import url(components/header.css);
 @import url(components/privacy.css);
+@import url(components/step.css);
 
 :root {
   --blueGray50: #F8FAFC;
@@ -40,9 +43,10 @@ a {
   color: var(--bodyFont);
 }
 
-.unselectable, img, .number, .btn-outlined {
+.unselectable, img, .btn-outlined {
   user-select: none;
 }
+
 img {
   pointer-events: none;
 }
