--- a/assets/stylesheets/components/step.css
+++ b/assets/stylesheets/components/step.css
@@ -4,27 +4,15 @@
   min-height: 100vh;
 }
 
-<<<<<<< HEAD
 .wrapper-step img {
   max-width: 100%;
-  margin: 16px 0;
-=======
-.number {
-  user-select: none;
-  font-weight: 700;
-  font-size: 360px;
-  color: var(--blueGray200);
-  margin: 0;
-  width: 200px;
-  text-align: right;
->>>>>>> b644088d51f61d9c2032fa7da25548503f0c7ce1
+  margin: 16px auto;
 }
 
 .wrapper-step .description {
   margin: auto 0;
   display: flex;
   align-items: center;
-
 }
 
 .wrapper-step h2 {
@@ -33,22 +21,8 @@
   line-height: 1.1;
 }
 
-<<<<<<< HEAD
 .wrapper-step .description div {
   max-width: 320px;
-=======
-.btn-outlined {
-  user-select: none;
-  padding: 8px 12px;
-  border: 2px solid var(--blueGray700);
-  color: var(--blueGray700);
-  font-weight: 600;
-  border-radius: 8px;
-  text-decoration: none;
-  display: inline-block;
-  cursor: pointer;
-  margin-top: 24px;
->>>>>>> b644088d51f61d9c2032fa7da25548503f0c7ce1
 }
 
 .wrapper-step .number {
@@ -57,14 +31,11 @@
   color: var(--blueGray200);
 }
 
-<<<<<<< HEAD
 .step-1-image {
   max-height: 800px;
   overflow: visible;
+  text-align: center;
 }
-=======
-/* --------------------------------- MOBILE --------------------------------- */
->>>>>>> b644088d51f61d9c2032fa7da25548503f0c7ce1
 
 @media (max-width: 1200px) {
   .wrapper-step {
