--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
   <!---------- STEP 1 ---------->
   <section class="bg-gray">
     <div class="container wrapper-step">
-      <div class="description">
+      <div class="text">
         <p class="number unselectable">1</p>
         <div>
           <h2>Pick a trail</h2>
@@ -59,7 +59,7 @@
   <section class="bg-white">
     <div class="container wrapper-step">
       <img src="assets/images/step/2.svg" alt="Preview of adding an accommodation to your itinerary and checking availability">
-        <div class="description">
+        <div class="text">
           <p class="number unselectable">2</p>
           <div>
             <h2>Build your itinerary</h2>
@@ -72,7 +72,7 @@
   <!---------- STEP 3 ---------->
   <section class="bg-gray">
     <div class="container wrapper-step">
-        <div class="description">
+        <div class="text">
           <p class="number unselectable">3</p>
           <div>
             <h2>Confirm and book</h2>
