--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
         type="email"
         id="email"
         name="email"
+        autocomplete="off"
         class="{% if inputMessage in ['error','userExists'] %}shake{% endif %}"
         placeholder="Email me when it’s ready"
         required>
