Add button transition and change step 1 wording

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
       <div class="text">
         <p class="number">1</p>
         <div>
-          <h2>Pick a trail</h2>
+          <h2>Explore your trail</h2>
           <p>Explore mountain huts and campsites along on your trail. See the trail’s stages, water sources, and resupply points.</p>
           <p class="request-access">Request access</p>
         </div>
